--- a/index.html
+++ b/index.html
@@ -33,22 +33,25 @@
       margin: 1rem;
     }
     .translation-text {
-      font-size: 0.8rem;
+      font-size: 1rem;
       text-align: center;
       color: #ccc;
-      margin-bottom: 1rem;
-      cursor: pointer;
+      margin-bottom: 3rem;
       position: absolute;
-      bottom: 5rem;
-      padding: 0 1.5rem;
+      bottom: 1.5rem; /* ← خليه فوق الأزرار مباشرة */
+      cursor: pointer;
+      max-width: 95%;
     }
     .controls {
+      position: fixed;
+      bottom: 1rem;
+      width: 100%;
       display: flex;
       justify-content: space-between;
-      width: 100%;
-      position: absolute;
-      bottom: 3rem;
+      align-items: center;
       padding: 0 1rem;
+      box-sizing: border-box;
+      z-index: 9;
     }
     .arrow-btn {
       background: transparent;
