--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       font-size: 1rem;
       text-align: center;
       color: #ccc;
-      margin-bottom: 3rem;
+      //margin-bottom: 1rem;
       position: absolute;
-      bottom: 1.5rem; /* ← خليه فوق الأزرار مباشرة */
+      bottom: 3rem; /* ← خليه فوق الأزرار مباشرة */
       cursor: pointer;
       max-width: 95%;
     }
@@ -67,7 +67,7 @@
       color: white;
       padding: 0.5rem 1rem;
       border-radius: 10px;
-      font-size: 2rem;
+      font-size: 1rem;
       cursor: pointer;
 	  opacity: 0.6; /* ⇦ الشفافية */
     }
